--- a/src/sample/main_gui.fxml
+++ b/src/sample/main_gui.fxml
@@ -16,7 +16,7 @@
    <children>
       <SplitPane dividerPositions="0.25" layoutX="290.0" layoutY="50.0" prefHeight="550.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0">
         <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" SplitPane.resizableWithParent="false">
                <children>
                   <TreeView fx:id="tree" layoutY="173.0" opacity="0.99" prefHeight="598.0" prefWidth="197.0" showRoot="false" styleClass="blackTree" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                </children>
@@ -38,7 +38,7 @@
                                     <Label layoutX="15.0" layoutY="30.0" text="Created in :" />
                                     <Label fx:id="date_created" layoutX="80.0" layoutY="30.0" text="00/00/0000" />
                                     <Label layoutX="146.0" layoutY="30.0" text="At :" />
-                                    <Label fx:id="time_created" layoutX="170.0" layoutY="30.0" text="00:00 AM" />
+                                    <Label fx:id="time_created" layoutX="170.0" layoutY="30.0" text="00:00:00 AM" />
                                  </children>
                               </HBox>
                               <HBox alignment="CENTER_LEFT" layoutX="368.0" layoutY="30.0" spacing="5.0" AnchorPane.rightAnchor="14.0">
@@ -46,7 +46,7 @@
                                     <Label layoutX="310.0" layoutY="30.0" text="Updated in :" HBox.hgrow="ALWAYS" />
                                     <Label fx:id="date_updated" layoutX="379.0" layoutY="30.0" text="00/00/0000" HBox.hgrow="ALWAYS" />
                                     <Label layoutX="445.0" layoutY="30.0" text="At :" HBox.hgrow="ALWAYS" />
-                                    <Label fx:id="time_updated" layoutX="469.0" layoutY="30.0" text="00:00 AM" HBox.hgrow="ALWAYS" />
+                                    <Label fx:id="time_updated" layoutX="469.0" layoutY="30.0" text="00:00:00 AM" HBox.hgrow="ALWAYS" />
                                  </children>
                               </HBox>
                            </children>
@@ -74,6 +74,15 @@
             <Button fx:id="deleteBtn" layoutX="734.0" layoutY="12.0" mnemonicParsing="false" styleClass="roundedButtons" text="Delete" />
          </children>
       </HBox>
-      <Label fx:id="notification" layoutX="217.0" layoutY="4.0" prefHeight="17.0" prefWidth="400.0" />
+      <HBox fx:id="notification_panel" alignment="CENTER_LEFT" layoutX="225.0" layoutY="16.0" opacity="0.0" spacing="5.0">
+         <children>
+            <ImageView fitHeight="17.0" fitWidth="18.0" layoutX="225.0" layoutY="16.0">
+               <image>
+                  <Image url="@notification.png" />
+               </image>
+            </ImageView>
+            <Label fx:id="notification" layoutX="249.0" layoutY="16.0" prefHeight="17.0" prefWidth="375.0" AnchorPane.leftAnchor="249.0" AnchorPane.rightAnchor="176.0" />
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
