--- a/src/simple_notes/res/main_gui_en.fxml
+++ b/src/simple_notes/res/main_gui_en.fxml
@@ -7,7 +7,8 @@
 <?import javafx.scene.layout.*?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="mainPanel" maxHeight="-Infinity" maxWidth="-Infinity"
             minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" styleClass="top"
-            stylesheets="@../styles/main_dark.css" xmlns="http://javafx.com/javafx/8" fx:controller="sample.Controller">
+            stylesheets="@../styles/main_dark.css" xmlns="http://javafx.com/javafx/8"
+            fx:controller="simple_notes.Controller">
     <children>
         <SplitPane dividerPositions="0.265" layoutX="290.0" layoutY="50.0" minHeight="300.0" minWidth="570.0"
                    prefHeight="550.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
