--- a/src/simple_notes/res/setting_ar.fxml
+++ b/src/simple_notes/res/setting_ar.fxml
@@ -5,7 +5,7 @@
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="anchor" maxHeight="-Infinity" maxWidth="-Infinity"
             minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="RIGHT_TO_LEFT" prefHeight="376.0"
             prefWidth="230.0" styleClass="setting-anchor" stylesheets="@../styles/setting_dark.css"
-            xmlns="http://javafx.com/javafx/8" fx:controller="sample.SettingController">
+            xmlns="http://javafx.com/javafx/8" fx:controller="simple_notes.SettingController">
     <children>
         <HBox alignment="CENTER_RIGHT" layoutX="456.0" layoutY="361.0" spacing="10.0" AnchorPane.bottomAnchor="10.0"
               AnchorPane.leftAnchor="86.0" AnchorPane.rightAnchor="14.0">
